# provenance

./: CLAUDE.md  Cargo.toml  README.md  cla-probe.txt  deny.toml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  detect.rs  drift.rs  lib.rs  main.rs  notice.rs  sbom.rs
src/commands/: check.rs  diff.rs  generate.rs  init.rs  mod.rs
tests/: cli.rs  integration_real.rs
