[package]
name = "stella-compliance"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "OSS-first compliance CLI for JavaScript and Rust repositories"
license = "MIT"
repository = "https://github.com/stella/stella-compliance"
homepage = "https://github.com/stella/stella-compliance"
keywords = ["compliance", "sbom", "licenses", "javascript", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
ignore = "0.4.24"
miette = { version = "7.6.0", features = ["fancy"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
similar = "2.7.0"
tempfile = "3.20.0"
toml = "0.8.23"
which = "7.0.3"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"
